--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <span>108 mil inscritos</span>
                 </div>
                         </div>
-
+                <div id="reactions">            
                 <button>INSCREVA-SE</button>
                     <div id="likes"> 
                 <img class="icons" src="assets/thumbs-up.png" alt="Botão de like">
@@ -59,7 +59,8 @@
                     <div id="download">
                 <img class="icons" src="assets/download.png" alt="Download">
                 <p>Download</p>
-                    </div>  
+                    </div>
+                </div>  
             </div>
 
         <p>1.783 visualizações  11 de out. de 2023</p>
